# getters-and-setters

./: Main.hs  getters-and-setters.cabal
