cabal-version:      3.0
name:               getters-and-setters
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable getters-and-setters
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.0
    default-language: Haskell2010
